--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class = "hoverParent">
               <div class = "initialImage">
                 <div class="cardTextContent">
-                  Augmenting NCR's Kiosks to be accessible to wheelchair users
+                  Making NCR's Kiosks accessible for wheelchair users
                 </div>
                 <img class="cardImageMain project3Image" src="coverImages/ncr.png" />
               </div>
