--- a/projectPages/virtual.html
+++ b/projectPages/virtual.html
@@ -62,8 +62,7 @@
           </span>
           <br>
           <span class="introTextContent">
-            Created VR experiences that portrayed
-            versatility, flexibility, and robustness
+            VR Development
           </span>
         </div>
 
@@ -147,7 +146,8 @@
                 <span class="introTextContent">
                   10 weeks<br>
                   <div class="timelineBar bcolor4"></div>
-                  Designed and developed VR experiences and set up
+                  Created VR experiences that portrayed
+                  versatility, flexibility, and robustness; and set up
                   lag-free serial communication
 
                 </span>
