--- a/projectPages/ncr.html
+++ b/projectPages/ncr.html
@@ -282,8 +282,8 @@
     </div>
 
 
-    <div class="contentImageSimpleSmaller">
-      <img src="../images/ncr/interview.JPG"  style="margin-bottom: 0px;">
+    <div class="contentImageSimple">
+      <img src="../images/ncr/interview2.jpg"  style="margin-bottom: 0px;">
     </div>
 
     <div class="row">
@@ -484,6 +484,10 @@
         assessment by experts and users for feedback.
     </div>
 
+    <div class="contentImageSimple">
+      <img src="../images/ncr/unavConceptAll.jpg" style="margin-bottom:0px;">
+    </div>
+
 
     <div class="row">
         <div class="contentImageSimple col-md-4">
@@ -526,18 +530,128 @@
         proposed concept is a companion to the already existing
         uNav control and will be considered as an evolution
         of the existing system.
-
-
-
-
     </div>
-
-
 
 
 
     <div class="subheadingSection">
       2. Wireframes
+    </div>
+
+    <div class="textContent">
+        Following the feedback from the concepts, we chose to take a deeper
+        look at the uNav compatibility concept by generating mid-fidelity wireframes.
+        <span class="color3"> These wireframes were constructed with the intent to inform a user of
+        how they might navigate through the ordering process from a high level,
+        what the information structure would look like (e.g. information hierarchy
+        and element size and placement), and how certain features might influence
+        their experience (e.g. tab indexing and highlighting selected elements). </span>
+        Here are a few wireframes out of the many that were used for testing.
+    </div>
+
+    <div class="row">
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w0.png">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w1.png">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w2.png">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w3.png">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w4.png">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/w5.png">
+        </div>
+
+    </div>
+
+    <div class="textContent">
+        We tested the above wireframes with our primary stakeholder,
+        NCR, in the form of an open focus group discussion.
+        We took notes from this session and captured valuable feedback and
+        related suggestions. We can make certain improvements to the current design:<br><br>
+
+        <ul>
+            <li style="font-weight: bold;">Information hierarchy</li>
+                <ul>
+                    <li>Including adequate space between interactive elements</li>
+                    <li>Separating elements  on screen by “interactive” and
+                        “non-interactive” elements, so as to keep any touch point within a certain area</li>
+                    <li>Presenting information (e.g. food items) in categories,
+                        so as to minimize the amount of information present at any moment</li>
+                </ul>
+            <br>
+            <li style="font-weight: bold;">Input feedback</li>
+                <ul>
+                    <li>Highlighting the element the user has currently selected</li>
+                    <li>Visually distinguish between interactive and non-interactive elements</li>
+                    <li>Increase contrast on certain existing elements (e.g. scroll bar) to improve recognizability</li>
+                </ul>
+            <br>
+            <li style="font-weight: bold;">Navigation</li>
+                <ul>
+                    <li>Arranging elements in a grid-pattern to promote navigating through interactive elements by tab indexing</li>
+                    <li>Incorporating “placeholder” elements that facilitate indexing,
+                        but are non-interactive, to allow a user to more easily traverse the screen</li>
+                    <li>Refining the navigation bar as a “tree” that better filters information</li>
+                    <li>Displaying the current, previous, and next steps that a user will take to complete their order, to better</li>
+                </ul>
+            <br>
+            <li style="font-weight: bold;">Predictability</li>
+                <ul>
+                    <li>Displaying current, previous, and next steps in the
+                        navigation bar that will communicate where a user is in the ordering process, and how many more steps they need to take to complete their order</li>
+                </ul>
+        </ul>
+
+        Our group analyzed the feedback and incorporated the results in the high fidelity design.<br><br>
+    </div>
+
+    <div class="subheadingSection">
+      3. High Fidelity Design
+    </div>
+
+    <div class="row">
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h2.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h3.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h4.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h5.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h6.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-2">
+          <img src="../images/ncr/h7.png" style="margin:1rem;">
+        </div>
+    </div>
+
+    <div class="subheadingSection">
+      4. Task Based Interactive Prototypes
+    </div>
+
+    <div class="row">
+        <div class="contentImageSimple col-md-3">
+          <img src="../images/ncr/ip1.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-5">
+          <img src="../images/ncr/ip2.png" style="margin:1rem;">
+        </div>
+        <div class="contentImageSimple col-md-3">
+          <img src="../images/ncr/ip3.png" style="margin:1rem;">
+        </div>
     </div>
 
 
@@ -549,13 +663,147 @@
 
 
     <div class="subheadingSection">
-      1. Heuristic Evaluation
+      1. Expert Based Testing
+    </div>
+
+    <div class="textContent">
+        <span class="color3">We chose to do a heuristic evaluation walkthrough
+        to evaluate our prototype and weed out the common
+        mistakes in the interface. </span>We used three cohorts
+        from the HCI program as usability experts and asked
+        them to perform certain tasks using our prototype.
+        <span class="color3">Using this approach, we were able to capture the
+        overall experience of a new user as well as point
+        out accessibility and usability issues on individual
+        screens and interactions. </span> We had the following information goals: <br><br>
+
+        <ul>
+            <li><span class="color3">Observability</span>: Can the users understand which stage
+                they are in the ordering process and the numbers of
+                steps needed to complete the order? Can the users
+                identify where their cursor is on the screen and
+                where can it go?s
+            </li>
+            <li><span class="color3">Learnability</span>: How easy it is for first-time
+                users to complete the food ordering process
+                within the new user interface with uNav keypad?
+            </li>
+            <li><span class="color3">Predictability</span>: Can the users understand
+                where their cursor can go before actually
+                pressing them? Can the users understand
+                the visual cues to predict the logic
+                flow of tab indexing?
+            </li>
+            <li><span class="color3">Experience</span>: Are users satisfied with the overall
+                ordering experience?
+            </li>
+        </ul>
+
+        <br>
+
+        Summary of Qualitative Feedback: <br><br>
+
+        <ul>
+            <li>Learning curve at first, then the tab indexing is intuitive</li>
+            <li>There is no obvious back button</li>
+            <li>Some clickable elements are not obvious</li>
+            <li>Playments buttons are too small</li>
+            <li>Menus aren’t aligned well with other interactive items on the screen</li>
+            <li>Visibility issues with how many steps are left in the ordering process</li>
+            <li>Child menu is not obvious/clear - Visual heirarchy issue</li>
+            <li>Pay screen is different from the rest of the system</li>
+        </ul>
+        <br>
+        Quantitative Feedback:
+    </div>
+
+    <div class="contentImageSimpleSmaller">
+      <img src="../images/ncr/qual1.png" style="margin-top: 1rem;">
     </div>
 
 
     <div class="subheadingSection">
-      2. Think Aloud Sessions
+      2. User Based Testing
     </div>
+
+    <div class="textContent">
+
+        <span class="color3"> We chose to do moderated task-based usability testing with
+        users to determine how well the interface is integrating
+        with the uNav keypad as an accessibility feature for input
+        during the food ordering and checking out process. Also, we
+        want to collect data on users’ performance for examining the
+        logic flow of tab indexing and get feedback on content,
+        functionality, and visual layout.</span> We conducted 9 in-person
+        single-participant sessions. We had the following information goals:<br><br>
+
+        <ul>
+            <li><span class="color3">Observability</span>: Can the users understand which stage
+                they are in the ordering process and the numbers of
+                steps needed to complete the order? Can the users
+                identify where their cursor is on the screen and
+                where can it go?s
+            </li>
+            <li><span class="color3">Learnability</span>: How easy it is for first-time
+                users to complete the food ordering process
+                within the new user interface with uNav keypad?
+            </li>
+            <li><span class="color3">Predictability</span>: Can the users understand
+                where their cursor can go before actually
+                pressing them? Can the users understand
+                the visual cues to predict the logic
+                flow of tab indexing?
+            </li>
+            <li><span class="color3">Recoverability</span>:
+                How easy it is for first-time users to cover
+                their errors with the help of system functionality?
+            </li>
+            <li><span class="color3">Satisfaction</span>:
+                Are users satisfied with how the system allows
+                them to complete food ordering and modifying tasks?
+            </li>
+        </ul>
+
+        <br> Summary of Qualitative Feedback: <br><br>
+
+        <ul>
+            <li>The system is offering too much freedom for
+                users to explore and users can be confused about what to do.
+            </li>
+            <li>The cart icon is not useful but visually distracting.</li>
+            <li>Pay button seems out of place,
+                not obvious and disconnected with the whole progress navigation.</li>
+            <li>Emphasize or add system status indicators to display order progress</li>
+            <li>Refine visual linear relationships between interactive elements</li>
+            <li>Incorporate a “back” button or similar function</li>
+            <li>Users don’t know how to get to the side functional buttons.</li>
+        </ul>
+        <br>
+        Quantitative Feedback:
+    </div>
+
+    <div class="contentImageSimpleSmaller">
+      <img src="../images/ncr/qual2.png" style="margin-top: 1rem;">
+    </div>
+
+    <div class="subheadingSection">
+      3. Results
+    </div>
+
+
+    <div class="textContent">
+    <span class="color3"> Apart from the issues mentioned above,
+    we found that the level of usability and visual
+    representation was satisfactory and the task flow
+    is easy to follow. </span> We found participant reception
+    to our prototype to be positive, and most issues
+    could be solved with some UI changes and building
+    a detailed information heirarchy.<span class="color3">  NCR is satisfied
+    with the overall design recommendations and plans
+    to keep them in mind while moving forward in the
+    developement of the XK32 Kiosk. </span>
+    </div>
+
 
     <div class="line"></div>
 
