--- a/projectPages/pecss.html
+++ b/projectPages/pecss.html
@@ -26,7 +26,13 @@
 
     <div class="topSection">
       <div class="headingText color1">
-        Prolonged Exposure Collective Sensing System (PECSS)
+
+          <span class="nsf_image_top">
+             <img src="../images/pecss/nsf_logo2.png">
+          </span>
+
+          Prolonged Exposure Collective Sensing System (PECSS)
+
       </div>
     </div>
 
