added the gray interaction color

--- a/projectPages/gray/gray.html
+++ b/projectPages/gray/gray.html
@@ -35,9 +35,8 @@
 
   <div class="container">
 
-
     <div class="headingSection">
-      <div class="headingText color4">
+      <div class="headingText color-white">
         Gray
       </div>
     </div>
